--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install lamindb spatialdata spatialdata-plot\n",
+    "# pip install lamindb spatialdata spatialdata-plot squidpy\n",
     "!lamin init --storage ./test-spatial --modules bionty"
    ]
   },
@@ -128,7 +128,7 @@
     "We'll work with a human lung cancer dataset generated using 10x Genomics Xenium platform and available in a public instance. \n",
     "This FFPE (formalin-fixed paraffin-embedded) tissue sample includes spatial gene expression profiles.\n",
     "\n",
-    "Create the central query object for this instance:"
+    "Create the central query object of our public [lamindata instance](https://lamin.ai/laminlabs/lamindata):"
    ]
   },
   {
