--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -39,8 +39,7 @@
     "import bionty as bt\n",
     "import spatialdata as sd\n",
     "\n",
-    "spatial_guide_datasets = ln.Project(name=\"spatial guide datasets\").save()\n",
-    "ln.track(project=spatial_guide_datasets)"
+    "ln.track()"
    ]
   },
   {
@@ -226,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the central query object for the public instance:"
+    "Create the central query object of our public [lamindata instance](https://lamin.ai/laminlabs/lamindata):"
    ]
   },
   {
