--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -54,14 +54,14 @@
     "\n",
     "mp.set_start_method(\"spawn\", force=True)\n",
     "\n",
-    "ln.track(project=\"spatial guide datasets\")"
+    "ln.track()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we query for Xenium and Visium datasets that we curated and ingested on the [previous page](https://docs.lamin.ai/spatial3) and create a merged dataset:"
+    "First, we query for Xenium and Visium datasets that we curated and ingested on the [previous page](https://docs.lamin.ai/spatial3):"
    ]
   },
   {
@@ -74,11 +74,10 @@
    },
    "outputs": [],
    "source": [
-    "xenium_datasets = ln.Artifact.filter(\n",
+    "xenium_af = ln.Artifact.filter(\n",
     "    tissue=\"breast\",\n",
     "    assay=\"10x Xenium\",\n",
-    ")\n",
-    "xenium_datasets.to_dataframe()"
+    ").first()"
    ]
   },
   {
@@ -91,18 +90,17 @@
    },
    "outputs": [],
    "source": [
-    "visium = ln.Artifact.filter(\n",
+    "visium_af = ln.Artifact.filter(\n",
     "    tissue=\"breast\",\n",
     "    assay=\"Visium Spatial Gene Expression\",\n",
-    ")\n",
-    "visium.to_dataframe()"
+    ").first()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the query results, we select the first Xenium dataset and the Visium dataset. "
+    "From the query results, we load the SpatialData datasets:"
    ]
   },
   {
@@ -115,8 +113,8 @@
    },
    "outputs": [],
    "source": [
-    "xenium_1_sd = xenium_datasets[0].load()\n",
-    "visium_sd = visium[0].load()"
+    "xenium_sd = xenium_af.load()\n",
+    "visium_sd = visium_af.load()"
    ]
   },
   {
@@ -129,7 +127,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "merged_sd = sd.SpatialData(\n",
@@ -139,10 +141,10 @@
     "        ],\n",
     "    },\n",
     "    shapes={\n",
-    "        \"cell_circles\": xenium_1_sd.shapes[\"cell_circles\"],\n",
-    "        \"cell_boundaries\": xenium_1_sd.shapes[\"cell_boundaries\"],\n",
+    "        \"cell_circles\": xenium_sd.shapes[\"cell_circles\"],\n",
+    "        \"cell_boundaries\": xenium_sd.shapes[\"cell_boundaries\"],\n",
     "    },\n",
-    "    tables={\"table\": xenium_1_sd[\"table\"]},\n",
+    "    tables={\"table\": xenium_sd[\"table\"]},\n",
     ")"
    ]
   },
