--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -4,38 +4,307 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial4.ipynb)\n"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial3.ipynb)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interactive visualization using Vitessce"
+    "# Train a spatial ML model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).  \n",
+    "Here, we show how we can query, access, and combine several SpatialData datasets across different technologies to train a Dense Net which predicts cell types Xenium data from an associated H&E image.\n",
+    "Specifically, we use the H&E image from Visium data, and the cell type information from overlapping Xenium data.\n",
+    "Both modalities are spatially aligned via an affine transformation.\n",
     "\n",
-    "Here is [a guide](https://docs.lamin.ai/vitessce) for visualizing spatial data with Vitessce.\n",
-    "\n",
-    "This [notebook](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI) adds the Vitessce visualization to [this Xenium dataset](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G) discussed on the previous pages."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://lamin-site-assets.s3.amazonaws.com/.lamindb/3QN5qimmfQ4CELoh0001.png\" width=\"900px\">"
+    "This tutorial is adapted from the [SpatialData documentation](https://spatialdata.scverse.org/en/stable/tutorials/notebooks/notebooks/examples/densenet.html)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "import lamindb as ln\n",
+    "import numpy as np\n",
+    "\n",
+    "import spatialdata as sd\n",
+    "from spatialdata import transform\n",
+    "from spatialdata.dataloader.datasets import ImageTilesDataset\n",
+    "\n",
+    "import pytorch_lightning as pl\n",
+    "from pytorch_lightning.callbacks import LearningRateMonitor\n",
+    "from pytorch_lightning.callbacks.progress import TQDMProgressBar\n",
+    "\n",
+    "import torch.multiprocessing as mp\n",
+    "\n",
+    "mp.set_start_method(\"spawn\", force=True)\n",
+    "\n",
+    "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "First, we query for Xenium and Visium datasets that we curated and ingested on the [previous page](https://docs.lamin.ai/spatial3):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_af = ln.Artifact.filter(\n",
+    "    tissue=\"breast\",\n",
+    "    assay=\"10x Xenium\",\n",
+    ").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium_af = ln.Artifact.filter(\n",
+    "    tissue=\"breast\",\n",
+    "    assay=\"Visium Spatial Gene Expression\",\n",
+    ").first()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the query results, we load the SpatialData datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_sd = xenium_af.load()\n",
+    "visium_sd = visium_af.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because both datasets were curated with matching tissue, disease, and organism metadata, we can merge them for multi-modal analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "merged_sd = sd.SpatialData(\n",
+    "    images={\n",
+    "        \"CytAssist_FFPE_Human_Breast_Cancer_full_image\": visium_sd.images[\n",
+    "            \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"\n",
+    "        ],\n",
+    "    },\n",
+    "    shapes={\n",
+    "        \"cell_circles\": xenium_sd.shapes[\"cell_circles\"],\n",
+    "        \"cell_boundaries\": xenium_sd.shapes[\"cell_boundaries\"],\n",
+    "    },\n",
+    "    tables={\"table\": xenium_sd[\"table\"]},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Visium image is rotated with respect to the Xenium data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_cell_types.png\" width=\"600\" height=\"500\" alt=\"Dense network of cell types\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we create an `ImageTilesDataset` using our merged `SpatialData` object.\n",
+    "We further import an image tile transform, the corresponding Pytorch Lightning `DataModule`, and the final `DenseNet` model from an existing script."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "````{dropdown} Code of tile_transform, ImageTilesDataset and the DenseNetModel\n",
+    "```{eval-rst}\n",
+    ".. literalinclude:: spatial_ml.py\n",
+    "   :language: python\n",
+    "   :caption: Spatial cell type classification model definition\n",
+    "```\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from spatial_ml import tile_transform, TilesDataModule, DenseNetModel\n",
+    "\n",
+    "dataset = ImageTilesDataset(\n",
+    "    sdata=merged_sd,\n",
+    "    regions_to_images={\"cell_circles\": \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"},\n",
+    "    regions_to_coordinate_systems={\"cell_circles\": \"aligned\"},\n",
+    "    table_name=\"table\",\n",
+    "    tile_dim_in_units=6\n",
+    "    * np.mean(\n",
+    "        transform(merged_sd[\"cell_circles\"], to_coordinate_system=\"aligned\").radius\n",
+    "    ),\n",
+    "    transform=tile_transform,\n",
+    "    rasterize=True,\n",
+    "    rasterize_kwargs={\"target_width\": 32},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we only need to set up a DataModule, our model, and we can start training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "pl.seed_everything(7)\n",
+    "\n",
+    "tiles_data_module = TilesDataModule(batch_size=64, num_workers=8, dataset=dataset)\n",
+    "\n",
+    "tiles_data_module.setup()\n",
+    "train_dl = tiles_data_module.train_dataloader()\n",
+    "val_dl = tiles_data_module.val_dataloader()\n",
+    "test_dl = tiles_data_module.test_dataloader()\n",
+    "\n",
+    "model = DenseNetModel(\n",
+    "    learning_rate=1e-5,\n",
+    "    in_channels=dataset[0][0].shape[0],\n",
+    "    num_classes=len(merged_sd[\"table\"].obs[\"celltype_major\"].cat.categories.tolist()),\n",
+    ")\n",
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=1,\n",
+    "    callbacks=[\n",
+    "        LearningRateMonitor(logging_interval=\"step\"),\n",
+    "        TQDMProgressBar(refresh_rate=5),\n",
+    "    ],\n",
+    "    log_every_n_steps=20,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "trainer.fit(model, datamodule=tiles_data_module)\n",
+    "trainer.test(model, datamodule=tiles_data_module)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we were to perform a prediction and evaluate it like outlined in the [original guide](https://spatialdata.scverse.org/en/stable/tutorials/notebooks/notebooks/examples/densenet.html), we would see predictions like:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "source": [
+    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_predicted.png\" width=\"1000\" height=\"450\" alt=\"Model predictions\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# clean up test instance\n",
