💚 Rename .list to .to_list

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -420,7 +420,7 @@
     "degs_up_featureset.pathways.set(enr_up_top10_pathways)\n",
     "degs_dw_featureset.pathways.set(enr_dw_top10_pathways)\n",
     "\n",
-    "degs_up_featureset.pathways.list(\"name\")"
+    "degs_up_featureset.pathways.to_list(\"name\")"
    ]
   },
   {
@@ -518,7 +518,7 @@
    "outputs": [],
    "source": [
     "contributing_genes = pathway.genes.all() & degs.genes.all()\n",
-    "contributing_genes.list(\"symbol\")"
+    "contributing_genes.to_list(\"symbol\")"
    ]
   },
   {
