--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_lookup.memory_b_cell.parents.list()"
+    "db_lookup.memory_b_cell.parents.to_list()"
    ]
   },
   {
