--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes.list(\"symbol\")"
+    "pathway_record.genes.to_list(\"symbol\")"
    ]
   },
   {
@@ -300,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes.list(\"ensembl_gene_id\")"
+    "pathway_record.genes.to_list(\"ensembl_gene_id\")"
    ]
   },
   {
