--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()"
+    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).to_list()"
    ]
   },
   {
@@ -186,7 +186,7 @@
     "    artifacts[0].features.slots[\"var\"].members\n",
     "    & artifacts[1].features.slots[\"var\"].members\n",
     ")\n",
-    "shared_markers.list(\"name\")"
+    "shared_markers.to_list(\"name\")"
    ]
   }
  ],
