--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -362,8 +362,8 @@
     ")\n",
     "\n",
     "# Link feature sets to artifact\n",
-    "artifact.features.add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
-    "artifact.features.add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
+    "artifact.features._add_schema(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
+    "artifact.features._add_schema(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
    ]
   },
   {
