--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -57,8 +57,6 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "import wetlab as wl\n",
     "import pyarrow.compute as pc\n",
     "import anndata as ad"
    ]
@@ -480,7 +478,6 @@
     "    ulabels=feature_counts.genefull_ex50pas,\n",
     "    tissues=tissues.brain,\n",
     "    experimental_factors=efos.single_cell,\n",
-    "    experiments__name__contains=\"CRISPRi\",  # `perturbation` column is registered in `wetlab.Experiment`\n",
     ").distinct()\n",
     "\n",
     "h5ads_brain.to_dataframe()"
@@ -506,19 +503,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "adatas = []\n",
-    "for artifact in h5ads_brain[:5]:  # only load the first 5 artifacts to save CI time\n",
-    "    adatas.append(artifact.load())\n",
-    "\n",
-    "# the obs metadatas are present in the parquet files\n",
-    "adata_concat = ad.concat(adatas)\n",
+    "adata_concat = h5ads_brain[:5].load()\n",
     "adata_concat"
    ]
   },
@@ -632,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -646,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "5FUyJ6RkVk0D",
