--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -501,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs = ln.FeatureSet.get(pathways__ontology_id=pathway.ontology_id)"
+    "degs = ln.Schema.get(pathways__ontology_id=pathway.ontology_id)"
    ]
   },
   {
