--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "panels_with_cd8 = ln.FeatureSet.filter(cell_markers=markers.cd8).all()"
+    "panels_with_cd8 = ln.Schema.filter(cell_markers=markers.cd8).all()"
    ]
   },
   {
