--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# pretend we're running a bulk RNA-seq pipeline\n",
     "ln.track(\n",
-    "    transform=ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\")\n",
+    "    transform=ln.Transform(key=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\")\n",
     ")\n",
     "# create a directory for its output\n",
     "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
