--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -318,7 +318,9 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "curate = ln.curators.AnnDataCurator(\n",
+    "    adata, var_index=bt.CellMarker.name, categoricals={}\n",
+    ")\n",
     "curate.validate()"
    ]
   },
