--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -318,10 +318,8 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.curators.AnnDataCurator(\n",
-    "    adata, var_index=bt.CellMarker.name, categoricals={}\n",
-    ")\n",
-    "curate.validate()"
+    "schema = ln.schemas.get(name=\"FACS-AnnData-schema\")\n",
+    "curator = ln.curators.AnnDataCurator(adata, schema=schema)"
    ]
   },
   {
@@ -334,7 +332,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"Oetjen18_t1\")"
+    "artifact = curator.save_artifact(description=\"Oetjen18_t1\")"
    ]
   },
   {
