--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -318,7 +318,7 @@
    },
    "outputs": [],
    "source": [
-    "schema = ln.schemas.get(name=\"FACS-AnnData-schema\")\n",
+    "schema = ln.Schema.get(name=\"FACS-AnnData-schema\")\n",
     "curator = ln.curators.AnnDataCurator(adata, schema=schema)"
    ]
   },
