--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -183,8 +183,8 @@
    "outputs": [],
    "source": [
     "shared_markers = (\n",
-    "    artifacts[0].features.slots[\"var\"].members\n",
-    "    & artifacts[1].features.slots[\"var\"].members\n",
+    "    artifacts[0].features.slots[\"var.T\"].members\n",
+    "    & artifacts[1].features.slots[\"var.T\"].members\n",
     ")\n",
     "shared_markers.to_list(\"name\")"
    ]
