--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: rewrite based on ln.Curator.from_anndata()\n",
+    "# TODO: rewrite based on ln.curators.AnnDataCurator()\n",
     "# artifact.features._add_set_from_anndata(\n",
     "#     var_field=bt.Gene.symbol,\n",
     "#     organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
@@ -501,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs = ln.FeatureSet.get(pathways__ontology_id=pathway.ontology_id)"
+    "degs = ln.Schema.get(pathways__ontology_id=pathway.ontology_id)"
    ]
   },
   {
