--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -441,15 +441,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
-    "curate.validate()"
+    "var_schema = ln.Schema(\n",
+    "    name=\"FACS-cell-markers\",\n",
+    "    itype=bt.CellMarker,\n",
+    ").save()\n",
+    "\n",
+    "obs_schema = ln.Schema(\n",
+    "    name=\"FACS-sample-metadata\",\n",
+    "    itype=ln.Feature,\n",
+    "    flexible=True,\n",
+    ").save()\n",
+    "\n",
+    "schema = ln.Schema(\n",
+    "    name=\"FACS-AnnData-schema\",\n",
+    "    otype=\"AnnData\",\n",
+    "    slots={\"obs\": obs_schema, \"var.T\": var_schema},\n",
+    ").save()"
    ]
   },
   {
@@ -462,7 +472,20 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"Alpert19\")"
+    "curator = ln.curators.AnnDataCurator(adata, schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact = curator.save_artifact(description=\"Alpert19\")"
    ]
   },
   {
@@ -533,7 +556,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact.features.slots[\"var\"].members.to_dataframe().head()"
+    "artifact.features.slots[\"var.T\"].members.to_dataframe().head()"
    ]
   },
   {
@@ -553,7 +576,7 @@
    },
    "outputs": [],
    "source": [
-    "markers = artifact.features.slots[\"var\"].members.lookup()\n",
+    "markers = artifact.features.slots[\"var.T\"].members.lookup()\n",
     "markers.cd14"
    ]
   },
