--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -318,8 +318,8 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
-    "curate.validate()"
+    "schema = ln.Schema.get(name=\"FACS-AnnData-schema\")\n",
+    "curator = ln.curators.AnnDataCurator(adata, schema=schema)"
    ]
   },
   {
@@ -332,7 +332,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"Oetjen18_t1\")"
+    "artifact = curator.save_artifact(description=\"Oetjen18_t1\")"
    ]
   },
   {
