--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "panels_with_cd8 = ln.FeatureSet.filter(cell_markers=markers.cd8).all()"
+    "panels_with_cd8 = ln.Schema.filter(cell_markers=markers.cd8).all()"
    ]
   },
   {
@@ -183,8 +183,8 @@
    "outputs": [],
    "source": [
     "shared_markers = (\n",
-    "    artifacts[0].features.slots[\"var\"].members\n",
-    "    & artifacts[1].features.slots[\"var\"].members\n",
+    "    artifacts[0].features.slots[\"var.T\"].members\n",
+    "    & artifacts[1].features.slots[\"var.T\"].members\n",
     ")\n",
     "shared_markers.to_list(\"name\")"
    ]
