--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardize metadata on-the-fly\n",
+    "# Cell type annotation and pathway analysis\n",
     "\n",
     "This use cases runs on a LaminDB instance with populated `CellType` and `Pathway` registries. Make sure you run the [GO Ontology](enrichr.ipynb) notebook before executing this use case.\n",
     "\n",
@@ -32,6 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install lamindb,bionty,scanpy,celltypist,gseapy\n",
+    "\n",
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "from lamin_usecases import datasets as ds\n",
@@ -39,15 +41,6 @@
     "import matplotlib.pyplot as plt\n",
     "import celltypist\n",
     "import gseapy as gp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track(\"hsPU1OENv0LS0000\")"
    ]
   },
   {
@@ -266,19 +259,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_features = ln.Feature.from_dataframe(adata.obs)\n",
-    "ln.save(new_features)\n",
-    "new_labels = [ln.ULabel(name=i) for i in adata.obs[\"stim\"].unique()]\n",
-    "ln.save(new_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.lookup()"
+    "ln.Feature(name=\"cell_type_celltypist\", dtype=bt.CellType).save()\n",
+    "ln.Feature(name=\"stim\", dtype=str).save()\n",
+    "obs_schema = ln.Schema(\n",
+    "    name=\"celltype_obs_schema\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"cell_type_celltypist\", dtype=bt.CellType).save(),\n",
+    "        ln.Feature(name=\"stim\", dtype=str).save(),\n",
+    "    ],\n",
+    ").save()\n",
+    "var_schema = ln.Schema(\n",
+    "    name=\"gene_var_schema\",\n",
+    "    itype=bt.Gene,\n",
+    ").save()\n",
+    "\n",
+    "schema = ln.Schema(\n",
+    "    name=\"anndata_seurat_ifnb_schema\",\n",
+    "    slots={\"obs\": obs_schema, \"var.T\": var_schema},\n",
+    "    otype=\"AnnData\",\n",
+    ").save()"
    ]
   },
   {
@@ -297,6 +296,7 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"seurat_ifnb_activated_Bcells\",\n",
+    "    schema=schema,\n",
     ").save()"
    ]
   },
@@ -306,15 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: rewrite based on ln.curators.AnnDataCurator()\n",
-    "# artifact.features._add_set_from_anndata(\n",
-    "#     var_field=bt.Gene.symbol,\n",
-    "#     organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "# )\n",
-    "# cell_type_records = bt.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
-    "# artifact.labels.add(cell_type_records, features.cell_type_celltypist)\n",
-    "# stim_records = ln.ULabel.from_values(adata.obs[\"stim\"])\n",
-    "# artifact.labels.add(stim_records, features.stim)"
+    "artifact.describe()"
    ]
   },
   {
@@ -348,17 +340,13 @@
     "    degs_up.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
-    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
+    "    organism=\"human\",\n",
     ")\n",
     "degs_dw_featureset = ln.Schema.from_values(\n",
     "    degs_dw.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
-    "    organism=(  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "        \"human\"\n",
-    "    ),\n",
+    "    organism=\"human\",\n",
     ")\n",
     "\n",
     "# Link feature sets to artifact\n",
@@ -440,7 +428,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "bt.Pathway.filter(name__contains=\"interferon-beta\").to_dataframe()"
@@ -456,10 +448,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "bt.Pathway.filter(genes__symbol=\"KIR2DL1\").to_dataframe()"
+    "bt.Pathway.filter(genes__symbol=\"IFITM1\").to_dataframe()"
    ]
   },
   {
@@ -539,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "hsPU1OENv0LS",
