--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -39,8 +39,8 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin load use-cases-registries"
+    "# !pip install lamindb,bionty,gseapy\n",
+    "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
   {
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt"
+    "import bionty as bt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -91,8 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "description = \"CellTypist Pan Immune Atlas v2: basic cell type information\"\n",
     "celltypist_source_v2_url = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
     "\n",
@@ -153,7 +152,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty = bt.CellType.public()\n",
+    "source = bt.Source.get(name=\"cl\")\n",
+    "source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bionty = bt.CellType.public(source=source)\n",
     "bionty"
    ]
   },
@@ -233,8 +242,7 @@
    "outputs": [],
    "source": [
     "bionty.inspect(\n",
-    "    [i.rstrip(\"s\") for i in celltypist_df[\"Low-hierarchy cell types\"]],\n",
-    "    bionty.name,\n",
+    "    [i.rstrip(\"s\") for i in celltypist_df[\"Low-hierarchy cell types\"]], field=\"name\"\n",
     ");"
    ]
   },
@@ -329,8 +337,7 @@
    "source": [
     "public_records = bt.CellType.from_values(\n",
     "    celltypist_df.ontology_id, bt.CellType.ontology_id\n",
-    ")\n",
-    "ln.save(public_records)"
+    ").save()"
    ]
   },
   {
@@ -584,7 +591,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
