--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install lamindb,bionty,gseapy\n",
     "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
@@ -49,9 +49,7 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "import gseapy as gp\n",
-    "\n",
-    "bt.settings.organism = \"human\"  # globally set organism"
+    "import gseapy as gp"
    ]
   },
   {
@@ -76,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "go_bp = gp.get_library(name=\"GO_Biological_Process_2023\", organism=\"Human\")\n",
+    "go_bp = gp.get_library(name=\"GO_Biological_Process_2025\", organism=\"Human\")\n",
     "print(f\"Number of pathways {len(go_bp)}\")"
    ]
   },
@@ -109,8 +107,7 @@
     "    \"ATF6-mediated Unfolded Protein Response (GO:0036500)\" -> (\"GO:0036500\", \"ATF6-mediated Unfolded Protein Response\")\n",
     "    \"\"\"\n",
     "    name, id = key.rsplit(\" (\", 1)\n",
-    "    id = id.rstrip(\")\")\n",
-    "    return id, name"
+    "    return id.rstrip(\")\"), name"
    ]
   },
   {
@@ -119,11 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "go_bp_parsed = {}\n",
-    "\n",
-    "for key, genes in go_bp.items():\n",
-    "    id, name = parse_ontology_id_from_keys(key)\n",
-    "    go_bp_parsed[id] = (name, genes)"
+    "go_bp_parsed = {\n",
+    "    parse_ontology_id_from_keys(k)[0]: (parse_ontology_id_from_keys(k)[1], v)\n",
+    "    for k, v in go_bp.items()\n",
+    "}"
    ]
   },
   {
@@ -146,6 +142,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = bt.Source.get(name=\"go\")\n",
+    "source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -153,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "bionty = bt.Pathway.public()\n",
+    "bionty = bt.Pathway.public(source=source)\n",
     "bionty"
    ]
   },
@@ -184,11 +190,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "pathway_records = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id)\n",
-    "ln.save(pathway_records)"
+    "pathway_records = bt.Pathway.from_values(\n",
+    "    go_bp_parsed.keys(), bt.Pathway.ontology_id\n",
+    ").save()"
    ]
   },
   {
@@ -210,32 +221,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "all_genes = bt.Gene.standardize(list({g for genes in go_bp.values() for g in genes}))\n",
-    "gene_records = bt.Gene.from_values(all_genes, bt.Gene.symbol)\n",
-    "ln.save(gene_records);"
+    "all_genes = bt.Gene.standardize(sum(go_bp.values(), []), organism=\"human\")\n",
+    "gene_records = bt.Gene.from_values(all_genes, organism=\"human\").save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Manually register the 37 non-validated symbols:"
+    "Manually register the 32 non-validated symbols:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "inspect_result = bt.Gene.inspect(all_genes, bt.Gene.symbol)\n",
+    "inspect_result = bt.Gene.inspect(all_genes, organism=\"human\")\n",
+    "organism = bt.Organism.get(name=\"human\")\n",
     "\n",
     "nonval_genes = []\n",
     "for g in inspect_result.non_validated:\n",
-    "    nonval_genes.append(bt.Gene(symbol=g))\n",
+    "    nonval_genes.append(bt.Gene(symbol=g, organism=organism))\n",
     "\n",
     "ln.save(nonval_genes)"
    ]
@@ -307,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Move on to the next analysis: [Standardize metadata on-the-fly](analysis-registries.ipynb)"
+    "Move on to the next analysis: [Cell type annotation and pathway analysis](analysis-registries.ipynb)"
    ]
   }
  ],
@@ -316,7 +335,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
