♻️ Polish analysis-registries

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -6,15 +6,7 @@
    "source": [
     "# Cell type annotation and pathway analysis\n",
     "\n",
-    "This use cases runs on a LaminDB instance with populated `CellType` and `Pathway` registries. Make sure you run the [GO Ontology](enrichr.ipynb) notebook before executing this use case.\n",
-    "\n",
-    "Here, we demonstrate how to standardize the metadata on-the-fly during cell type annotation and pathway enrichment analysis using these two registries.\n",
-    "\n",
-    "For more information, see:\n",
-    "- {doc}`docs:public-ontologies`\n",
-    "- {doc}`docs:bio-registries`\n",
-    "- {doc}`docs:curate`\n",
-    "- {doc}`docs:scrna`"
+    "Please make sure that you run the [GO Ontology](enrichr.ipynb) notebook before this one so that your `CellType` and `Pathway` registries are populated."
    ]
   },
   {
@@ -32,8 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install lamindb,bionty,scanpy,celltypist,gseapy\n",
-    "\n",
+    "# pip install lamindb,scanpy,celltypist,gseapy\n",
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "from lamin_usecases import datasets as ds\n",
@@ -54,13 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A small peripheral blood mononuclear cell dataset that is split into control and stimulated groups. The stimulated group was treated with interferon beta."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "A small peripheral blood mononuclear cell dataset that is split into control and stimulated groups. The stimulated group was treated with interferon beta.\n",
     "Let's load the dataset and perform some preprocessing:"
    ]
   },
@@ -208,7 +193,6 @@
     "    (rank_genes_groups_df[\"logfoldchanges\"] < 0)\n",
     "    & (rank_genes_groups_df[\"pvals_adj\"] < 0.05)\n",
     "]\n",
-    "\n",
     "degs_up.shape, degs_dw.shape"
    ]
   },
@@ -284,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register dataset using a Artifact object:"
+    "Register dataset using an `Artifact` object:"
    ]
   },
   {
@@ -297,15 +281,7 @@
     "    adata,\n",
     "    description=\"seurat_ifnb_activated_Bcells\",\n",
     "    schema=schema,\n",
-    ").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").save()\n",
     "artifact.describe()"
    ]
   },
@@ -320,14 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's enable tracking of the current notebook as the transform of this artifact:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We further create two feature sets for `degs_up` and `degs_dw` which we can later associate with the associated pathways:"
+    "Let's create two schemas (two feature sets) for `degs_up` and `degs_dw`:"
    ]
   },
   {
@@ -336,22 +305,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset = ln.Schema.from_values(\n",
+    "schema_degs_up = ln.Schema.from_values(\n",
     "    degs_up.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
     "    organism=\"human\",\n",
     ")\n",
-    "degs_dw_featureset = ln.Schema.from_values(\n",
+    "schema_degs_dw = ln.Schema.from_values(\n",
     "    degs_dw.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
     "    organism=\"human\",\n",
-    ")\n",
-    "\n",
-    "# Link feature sets to artifact\n",
-    "artifact.features._add_schema(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
-    "artifact.features._add_schema(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
+    ")"
    ]
   },
   {
@@ -387,7 +352,7 @@
     "    for pw_id in enr_dw.head(10).Term.apply(parse_ontology_id_from_enrichr_results)\n",
     "]\n",
     "\n",
-    "# get pathway records\n",
+    "# get pathway objects\n",
     "enr_up_top10_pathways = bt.Pathway.from_values(enr_up_top10, bt.Pathway.ontology_id)\n",
     "enr_dw_top10_pathways = bt.Pathway.from_values(enr_dw_top10, bt.Pathway.ontology_id)"
    ]
@@ -405,10 +370,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset.pathways.set(enr_up_top10_pathways)\n",
-    "degs_dw_featureset.pathways.set(enr_dw_top10_pathways)\n",
+    "schema_degs_up.pathways.set(enr_up_top10_pathways)\n",
+    "schema_degs_dw.pathways.set(enr_dw_top10_pathways)\n",
+    "schema_degs_up.pathways.to_list(\"name\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this, we stored the result of the differential expression analysis via schema objects where each schema object links a gene set and its set of enriched pathways in the dataset.\n",
     "\n",
-    "degs_up_featureset.pathways.to_list(\"name\")"
+    "This allows queries along the lines below."
    ]
   },
   {
@@ -478,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query featuresets from a pathway to learn from which geneset this pathway was computed:"
+    "Query schemas from a pathway to learn from which geneset this pathway was computed:"
    ]
   },
   {
@@ -504,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can get the list of genes that are differentially expressed and belong to this pathway:"
+    "Get the list of genes that are differentially expressed and belong to this pathway:"
    ]
   },
   {
@@ -520,16 +493,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete --force use-cases-registries\n",
-    "!rm -r ./use-cases-registries"
+    "!rm -r ./use-cases-registries\n",
+    "!lamin delete --force use-cases-registries"
    ]
   }
  ],
