--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis: cell type annotation using CellTypist"
+    "## Analysis: Cell type annotation using CellTypist"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Link pathway labels"
+    "## Manage pathway objects"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Querying pathways"
+    "## Query pathways"
    ]
   },
   {
