--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/celltypist.ipynb)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fcelltypist.ipynb)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -21,12 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cell types classify cells based on public and private knowledge from studying transcription, morphology, function & other properties.\n",
-    "Established cell types have well-characterized markers and properties; however, cell subtypes and states are continuously being discovered, refined and better understood.\n",
+    "Here, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data.\n",
     "\n",
-    "In this notebook, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data.\n",
-    "\n",
-    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to curate datasets analyzed with CellTypist enrichment analysis and track the dataset with LaminDB."
+    "In the following [Cell type annotation and pathway analysis](analysis-registries) guide, we will re-use this vocabulary."
    ]
   },
   {
@@ -39,24 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install lamindb,bionty,gseapy\n",
+    "# pip install lamindb\n",
     "!lamin init --storage ./use-cases-registries --modules bionty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# filter warnings from celltypist\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", message=\".*The 'nopython' keyword.*\")"
    ]
   },
   {
@@ -143,7 +116,7 @@
     "\n",
     "This will avoid that we'll refer to the same cell type with different identifiers.\n",
     "\n",
-    "We need a `Bionty` object for this:"
+    "We need a public ontology for this. Let's first get the `CL` ontology source."
    ]
   },
   {
@@ -187,9 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This looks good!\n",
-    "\n",
-    "But when inspecting the names, most of them don't validate:"
+    "This looks good! But when inspecting the names, most of them don't validate:"
    ]
   },
   {
@@ -358,15 +329,15 @@
    },
    "outputs": [],
    "source": [
-    "from lamindb.core.exceptions import ValidationError\n",
-    "\n",
     "public_records_dict = {r.ontology_id: r for r in public_records}\n",
     "\n",
     "for _, row in celltypist_df.iterrows():\n",
     "    record = public_records_dict[row[\"ontology_id\"]]\n",
     "    try:\n",
     "        record.add_synonym(row[\"ct_name\"])\n",
-    "    except ValidationError:  # do nothing if the synonym already exists as a record\n",
+    "    except (\n",
+    "        ln.errors.ValidationError\n",
+    "    ):  # do nothing if the synonym already exists as a record\n",
     "        pass"
    ]
   },
@@ -576,13 +547,6 @@
    "outputs": [],
    "source": [
     "db_lookup.memory_b_cell.parents.to_list()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Move on to the next registry: [GO pathways](enrichr)"
    ]
   }
  ],
