💄 Polish enrichr and gene

--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -20,11 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different datasets are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
-    "\n",
     "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the steps of registering pathways and link them to genes.\n",
     "\n",
-    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the dataset with LaminDB."
+    "In the [Cell type annotation and pathway analysis](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the dataset with LaminDB."
    ]
   },
   {
@@ -37,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install lamindb,bionty,gseapy\n",
+    "# pip install lamindb,gseapy\n",
     "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
@@ -65,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we fetch the \"GO_Biological_Process_2023\" pathways for humans using [GSEApy](https://github.com/zqfang/GSEApy) which wraps [GSEA](https://www.gsea-msigdb.org/gsea/index.jsp) and [Enrichr](https://maayanlab.cloud/Enrichr/)."
+    "First we fetch the `\"GO_Biological_Process_2023\"` pathways for humans using [GSEApy](https://github.com/zqfang/GSEApy) which wraps [GSEA](https://www.gsea-msigdb.org/gsea/index.jsp) and [Enrichr](https://maayanlab.cloud/Enrichr/)."
    ]
   },
   {
@@ -197,9 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "pathway_records = bt.Pathway.from_values(\n",
-    "    go_bp_parsed.keys(), bt.Pathway.ontology_id\n",
-    ").save()"
+    "pathways = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id).save()"
    ]
   },
   {
@@ -229,7 +225,7 @@
    "outputs": [],
    "source": [
     "all_genes = bt.Gene.standardize(sum(go_bp.values(), []), organism=\"human\")\n",
-    "gene_records = bt.Gene.from_values(all_genes, organism=\"human\").save()"
+    "genes = bt.Gene.from_values(all_genes, organism=\"human\").save()"
    ]
   },
   {
@@ -281,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols_gene_records = {record.symbol: record for record in gene_records}"
+    "symbols_genes = {record.symbol: record for record in genes}"
    ]
   },
   {
@@ -290,10 +286,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for pathway_record in pathway_records:\n",
-    "    pathway_genes = go_bp_parsed.get(pathway_record.ontology_id)[1]\n",
-    "    pathway_genes_records = [symbols_gene_records.get(gene) for gene in pathway_genes]\n",
-    "    pathway_record.genes.set(pathway_genes_records)"
+    "for pathway in pathways:\n",
+    "    pathway_genes = go_bp_parsed.get(pathway.ontology_id)[1]\n",
+    "    pathway_genes_records = [symbols_genes.get(gene) for gene in pathway_genes]\n",
+    "    pathway.genes.set(pathway_genes_records)"
    ]
   },
   {
@@ -310,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes.to_list(\"symbol\")"
+    "pathway.genes.to_list(\"symbol\")"
    ]
   },
   {
@@ -319,14 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_record.genes.to_list(\"ensembl_gene_id\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Move on to the next analysis: [Cell type annotation and pathway analysis](analysis-registries.ipynb)"
+    "pathway.genes.to_list(\"ensembl_gene_id\")"
    ]
   }
  ],
