--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -310,13 +310,13 @@
     "    bt.Gene.symbol,\n",
     "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
     "    organism=\"human\",\n",
-    ")\n",
+    ").save()\n",
     "schema_degs_dw = ln.Schema.from_values(\n",
     "    degs_dw.names,\n",
     "    bt.Gene.symbol,\n",
     "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
     "    organism=\"human\",\n",
-    ")"
+    ").save()"
    ]
   },
   {
