🚚 Rename wetlab to pertdb

--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -41,8 +41,8 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[gcp]'\n",
-    "!lamin init --modules bionty,wetlab --storage ./test-arc-virtual-cell-atlas"
+    "# pip install 'lamindb[gcp]',bionty,pertdb\n",
+    "!lamin init --modules bionty,pertdb --storage ./test-arc-virtual-cell-atlas"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "source": [
     "# lookup objects give you pythonic access to the values\n",
     "cell_lines = db.bionty.CellLine.lookup(\"ontology_id\")\n",
-    "drugs = db.wetlab.Compound.lookup()\n",
+    "drugs = db.pertdb.Compound.lookup()\n",
     "\n",
     "artifacts_a549_piroxicam = artifacts_tahoe.filter(\n",
     "    cell_lines=cell_lines.cvcl_0023, compounds=drugs.piroxicam\n",
