Fix installation command

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install lamindb,scanpy,celltypist,gseapy\n",
+    "# pip install lamindb celltypist gseapy\n",
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "from lamin_usecases import datasets as ds\n",
