--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -563,7 +563,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
